# support_assistant

./: .env.demo  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml  run.sh  run_demo.sh  run_demo_fresh.sh  run_fresh.sh
.github/workflows/: tests.yml
adapters/embeddings/: api_client.py  base.py  factory.py  local_st.py  mock.py
adapters/llm/: base.py  exceptions.py  factory.py  gigachat.py  mock.py  openai_compatible.py
adapters/text_search/: base.py  factory.py  postgres_fts.py  sqlite_fts.py
adapters/ticket_source/: base.py  csv_source.py  factory.py  sm_api.py
adapters/vector_store/: base.py  factory.py  pgvector_store.py  sqlite_vec_store.py
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_index_tables.py  0003_audit_prompt_fewshot.py
api/: dependencies.py  errors.py  main.py  middleware.py  schemas.py
api/routes/: alerts.py  assistant.py  audit.py  categorize.py  conversations.py  csrf.py  diag.py  evals.py  fewshot.py  health.py  ingest.py  kb.py  pii.py  prompts.py  settings.py  stale.py  stats.py  tickets.py  weak.py
config/: logging.py  settings.py
core/: chunking.py  models.py  redact.py  security.py  text_cleaning.py
core/pii/: ner_masker.py  pipeline.py  regex_masker.py  ticket_masking.py  types.py
core/prompts/: categorization.txt  judge_faithfulness.txt  judge_helpfulness.txt  loader.py  reranker.txt  system_assistant.txt  system_ingest.txt  ticket_resolution_classifier.txt  ticket_summary.txt
data/: sample_tickets.csv
db/: base.py  engine.py  models.py
db/repositories/: conversations.py  ingest_jobs.py  kb.py  llm_logs.py  tickets.py
demo_artifacts/: README.md
demo_artifacts/v1_credit/: 01_tickets.csv  02_modules_registry.json  03_assignee_groups.json  04_glossary.json  05_pii_extra.json  08_known_issues.json  10_quality_scores.csv  11_top_categories.csv  12_sla_matrix.json  13_escalation_policy.md  14_module_owners.json
demo_artifacts/v2_retail/: 01_tickets.csv  02_modules_registry.json  03_assignee_groups.json  04_glossary.json  05_pii_extra.json  08_known_issues.json  (+5 more)
docs/: 00-OVERVIEW.md  01-ARCHITECTURE.md  02-PROJECT-STRUCTURE.md  03-DATA-MODELS.md  04-CONFIG.md  05-ADAPTERS-LLM.md  06-ADAPTERS-EMBEDDINGS.md  07-ADAPTERS-VECTORSTORE.md  08-PII-MASKING.md  09-PIPELINE-INGEST.md  10-RETRIEVAL.md  11-ASSISTANT.md  12-CATEGORIZATION.md  13-API.md  14-UI.md  15-EVALS.md  16-PROMPTS.md  17-DEPLOYMENT.md  18-TESTING.md  19-SECURITY.md  20-IMPLEMENTATION-PLAN.md  E2E-AUDIT.md  EVAL-BASELINE.md  GIGACHAT-ONBOARDING.md  README.md  RUN-SCRIPTS.md  SECURITY-CHECKLIST.md
evals/: metrics.py  runner.py
scripts/: diff_eval_runs.py  download_models.py  e2e_audit.py  ingest_tickets.py  init_db.py  reindex.py  run_evals.py  seed_demo_data.py
services/: answer_formatter.py  assistant.py  categorizer.py  prompt_builder.py  reranker.py  retrieval.py  ticket_search.py
tests/: conftest.py
ui/: index.html
(+202 files in other folders)
