[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "support-assistant"
version = "0.1.0"
description = "RAG-ассистент 1-й линии поддержки для банковского веб-приложения"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web / API
    "fastapi>=0.115,<0.117",
    "uvicorn[standard]>=0.30,<0.36",
    "python-multipart>=0.0.9",

    # Config / validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",

    # ORM / DB
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.29,<1",
    # greenlet — обязателен для async SQLAlchemy. Транзитивно подтягивается
    # не на всех системах (особенно macOS arm64 + Python 3.13), поэтому
    # фиксируем явно.
    "greenlet>=3,<4",

    # Vector / FTS
    "sqlite-vec>=0.1.6",
    "pgvector>=0.3,<1",

    # ML / embeddings / NER
    "sentence-transformers>=3.0,<4",
    "natasha>=1.6,<2",

    # HTTP
    "httpx>=0.27,<1",

    # Logging
    "structlog>=24.1,<26",

    # CLI / misc
    "click>=8.1,<9",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-python-dateutil",
]
e2e = [
    # Browser E2E-аудит (scripts/e2e_audit.py).
    # Браузер ставится отдельно: `playwright install chromium`.
    "playwright>=1.45,<2",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "config*",
    "core*",
    "db*",
    "adapters*",
    "pipelines*",
    "services*",
    "api*",
    "evals*",
    "scripts*",
]
exclude = ["tests*", "ui*", "docs*", "data*", "models*"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions", "data", "models"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # длина строки — есть line-length
    "B008",  # FastAPI любит Depends() в дефолтах
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "SIM"]
"scripts/**" = ["T20"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["alembic/versions", "data", "models", "ui"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: быстрые unit-тесты без I/O",
    "integration: интеграционные тесты с БД",
    "real_llm: тесты, требующие реального LLM (по умолчанию пропускаются)",
]
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
